# cs2shock

./: Cargo.toml  README.md  config.json  config.toml  drone.yaml  gamestate_integration_cs2shock.cfg
src/: api.rs  config.rs  gamestateintegration.rs  gui.rs  main.rs  pishock.rs
