[package]
name = "cs2shock"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.1"
axum-macros = "0.4.0"
config-file = "0.2.3"
eframe = "0.24.1"
egui = "0.24.1"
log = "0.4.20"
rand = "0.8.5"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
simple_logger = "4.3.0"
time = "0.3.30"
tokio = { version = "1.34.0", features = ["full"] }
